# youtube-video-download-automation

.github/workflows/: sync_to_hf.yml
backend/: Dockerfile  README.md  cookies.txt  main.py  pyproject.toml
backend/configs/: agent_config.py  env_config.py
backend/models/: pydanti_model.py
backend/ools/: filename_modif.py  helper.py  search_youtube_video_tool.py
backend/routers/: chat_router.py  downloadvideo_router.py  searchchannel_router.py
channel-spark-down/: .env  ads.txt  package-lock.json  package.json  vite.config.ts
channel-spark-down/src/: styles.css
channel-spark-down/src/components/: AdSenseUnit.tsx
channel-spark-down/src/components/ytdl/: ChannelCard.tsx  ChannelSearch.tsx  DownloadSection.tsx  VideoCard.tsx  VideoGrid.tsx  VideoSearch.tsx
channel-spark-down/src/lib/: constant.ts
channel-spark-down/src/routes/: __root.tsx  index.tsx
