[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "google-api-python-client>=2.196.0",
    "openai-agents>=0.15.2",
    "python-dotenv>=1.2.2",
    "yt-dlp>=2026.3.17",
]
